--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@tailwindcss/vite": "^4.0.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "emailjs": "^4.0.3",
+    "emailjs-com": "^3.2.0",
     "embla-carousel-react": "^8.5.2",
     "lucide-react": "^0.477.0",
     "next-themes": "^0.4.4",
