--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
+    "deploy": "vite build && cp dist/index.html dist/404.html && gh-pages -d dist",
     "lint": "eslint .",
     "preview": "vite preview"
   },
