--- a/components.json
+++ b/components.json
@@ -5,7 +5,7 @@
   "tsx": true,
   "tailwind": {
     "config": "",
-    "css": "src/custom.css",
+    "css": "src/App.css",
     "baseColor": "slate",
     "cssVariables": true,
     "prefix": ""
