--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^7.2.0",
     "recharts": "^2.15.1",
+    "shadcn": "^2.4.0-canary.12",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.9",
