--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.477.0",
     "next-themes": "^0.4.4",
+    "radix-ui": "^1.1.3",
     "react": "^19.0.0",
-    "react-day-picker": "^8.10.1",
+    "react-day-picker": "^9.5.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-resizable-panels": "^2.1.7",
