--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
       "use": "@vercel/static-build",
       "config": {
         "installCommand": "npm install --legacy-peer-deps",
-        "buildCommand": "npm run build:github"
+        "buildCommand": "vite build"
       }
     }
   ]
