feat: add vercel-build script to package.json for Vercel deployment

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "predeploy": "npm run build:github",
     "deploy": "gh-pages -d dist",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "vercel-build": "vite build"
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
